--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-
+    
     <head>
         <title>Rango</title>
     </head>
@@ -13,9 +13,9 @@
             {% if pages %}
             <ul>
                 {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+                    <li><a href="{{ page.url }}">{{ page.title }}</a> </li>
                 {% endfor %}
-            </ul>
+            </ul>>
             {% else %}
             <strong>No pages currently in category.</strong>
             {% endif %}
@@ -23,6 +23,8 @@
             The specified category does not exist.
         {% endif %}
         </div>
+
+        <a href="/rango/">Index</a>
     </body>
 
 </html>
