--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -3,13 +3,13 @@
 
 {% block title_block %}
     Homepage
- {% endblock %}
+{% endblock %}
 
 {% block body_block %}
 <h1>Rango says...</h1>
 <div>
     {% if user.is_authenticated %}
-        howdy {{ user.username }}
+        howdy {{ user.username }}!
     {% else %}
         hey there partner!
     {% endif %}
